<resources>
    <string name="app_name">RunEvo</string>
    <string-array name="filter_options">
        <item>Fecha</item>
        <item>Tiempo Corrido</item>
        <item>Distancia</item>
        <item>Velocidad</item>
        <item>Calorias Quemadas</item>
    </string-array>

    //nombres de clases
    <string name="title_perfil">Perfil</string>
    <string name="title_estadisticas">Estadisticas</string>
    <string name="title_carrera">Carrera</string>
    <string name="title_trofeos">Trofeos</string>
    <string name="title_comunidad">Comunidad</string>
    <string name="cancel_tracking">Cancelar Carrera</string>
    <string name="title_historial">historial</string>
    <string name="title_registro">Registro</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDUWgI3L_aSqhzz40-sU_i76oTbIwOd0ak</string>

    //setup fragment
    <string name="tv_bienvenida">¡Bienvenido a RunEvo! Por favor, ingresa tu nombre y peso</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_peso">Peso</string>
    <string name="tv_peso">Kg</string>
    <string name="btn_continuar">Continuar</string>


    //iniciar sesion
    <string name="user">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_recuperar">Recuperar</string>
    <string name="btn_restablecer">Restablecer</string>

    //Perfil
    <string name="perfil">Perfil</string>
    <string name="nomUsuario">Elliud Kipchoge</string>
    <string name="dir_usuario">Cd. Obregón, Son.</string>
    <string name="tipoCuenta">Premium</string>
    <string name="antiguedadCuenta">Miembro premium desde 2022</string>
    <string name="btnConfiguracion"></string>

    //Configuracion
    <string name="configuracion">Configuración</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="correo_e">Correo electrónico</string>
    <string name="num_celular">Número de celular</string>
    <string name="unidad_medida">Unidades de medida</string>
    <string name="config_carrera">Configuración de la carrera</string>
    <string name="vinculacion">Vinculación con otras apps</string>
    <string name="smart_watch">Vinculación con SmartWatch</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="privacidad">Privacidad</string>
    <string name="version">Versión</string>
    <string name="terminos_de_uso">Términos de uso</string>
    <string name="contacto">Contacto</string>
    <string name="pais">País/Región</string>
    <string name="idioma">Idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
