<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_carrera">

    <fragment
        android:id="@+id/nav_trofeos"
        android:name="gonzalez.hernandez.runevo.ui.trofeos.TrofeosFragment"
        android:label="@string/title_trofeos"
        tools:layout="@layout/fragment_trofeos" />

    <fragment
        android:id="@+id/nav_comunidad"
        android:name="gonzalez.hernandez.runevo.ui.comunidad.ComunidadFragment"
        android:label="@string/title_comunidad"
        tools:layout="@layout/fragment_comunidad" />

    <fragment
        android:id="@+id/nav_carrera"
        android:name="gonzalez.hernandez.runevo.ui.carrera.CarreraFragment"
        android:label="@string/title_carrera"
        tools:layout="@layout/fragment_carrera" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="gonzalez.hernandez.runevo.ui.historial.HistorialFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="gonzalez.hernandez.runevo.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>