<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion"
    android:orientation="vertical"
    android:background="@color/oscuro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBackCreateA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_arrow_back_42"
            android:background="@color/oscuro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracion"
            android:textColor="@color/gris"
            android:textSize="36sp"
            android:fontFamily="@font/alt_sweat_font"
            android:layout_marginTop="45dp"
            android:layout_marginStart="25dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/editar_perfil"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/correo_e"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/num_celular"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/unidad_medida"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/config_carrera"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/vinculacion"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/smart_watch"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/pais"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/idioma"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/notificaciones"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/privacidad"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/terminos_de_uso"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/version"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/boton_redondo_gris"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/contacto"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/oscuro"
                android:textSize="16sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/btn_cerrar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/gris"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:paddingBottom="30dp"/>

        </LinearLayout>



    </ScrollView>



</LinearLayout>