<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/oscuro"
    tools:context=".ui.perfil.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_perfil"
            android:text="Perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/gris"
            android:fontFamily="@font/alt_sweat_font"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/cuadrado_claro"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/foto_perfil"
            app:civ_border_color="@color/verde_oscuro"
            app:civ_border_width="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomUsuario"
            android:textColor="@color/oscuro"
            android:fontFamily="@font/alt_sweat_font"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dir_usuario"
            android:textColor="@color/oscuro"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:drawableStartCompat="@drawable/ic_location_24"
            android:drawablePadding="5dp"
            app:drawableTint="@color/gris_oscuro" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_letras"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/alt_sweat_font"
                android:text="Cuenta"
                android:textColor="@color/gris"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/premium_32" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alt_sweat_font"
                android:text="@string/tipoCuenta"
                android:textColor="@color/gris"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antiguedadCuenta"
                android:textColor="@color/gris"
                android:fontFamily="sans-serif"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alt_sweat_font"
            android:text="@string/btnConfiguracion"
            android:textAllCaps="false"
            android:textColor="@color/gris"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_baseline_settings_24"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"/>


    </LinearLayout>





</LinearLayout>